--- a/mango.html
+++ b/mango.html
@@ -7,6 +7,7 @@
     }
  </style>
 <body>
+    <p>what happen when we colse an empty tag</p>
     
     <div id="love"> kya haal hai</div>
 <a href="https://stylemecck.com">Jeevan ka satay</a>
